welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: value int
int nbPas=0
^Variables:3: error: not found: value estsurBiscuit
while(!estsurBiscuit) {
       ^Variables:5: error: not found: value nbPas
	nbPas = nbPas+1
        ^