welcome.lessons.welcome.variables.Variables.scala.code
int nbPas=0
while(!estsurBiscuit) {
	avance()
	nbPas = nbPas+1
}
